# jarvis

./: .dockerignore  .gitignore  CLAUDE.md  README.md  dev.sh  plan.md  run.py
.claude/: settings.json
.claude/rules/: python-style.md  testing.md  tools.md
.github/workflows/: jarvis-agent.yml
app/: .env.example  CLAUDE.md  pyproject.toml
app/src/jarvis/: chat.py  cli.py  config.py  graph.py  memory.py  tools.py
app/tests/: test_chat.py  test_cli.py  test_config.py  test_graph.py  test_memory.py
backend/: .env.example  CLAUDE.md  Dockerfile  README.md  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_auth_schema.py  002_agent_runs.py
backend/src/jarvis/: __init__.py  admin.py  api.py  auth.py  cache.py  chat.py  chat_once.py  checkpoint.py  cli.py  config.py  (+10 more)
backend/tests/: conftest.py  test_admin.py  test_agent_runs.py  test_api.py  test_auth.py  test_cache.py  test_cartola_client.py  test_cartola_scraper.py  test_cartola_tools.py  test_chat.py  test_classifier.py  test_cli.py  test_config.py  test_db.py  test_deps.py  test_github_tools.py  test_graph.py  test_graph_cache.py  test_logs.py  test_run.py  test_tools.py  test_webhook.py
frontend/: Dockerfile  index.html  nginx.conf.template  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  routes.tsx  types.ts  useChat.ts
trilha/: 00-plano-basico.md  01-fundacao.md  02-assistente-minimo-langchain.md  03-tool-calling-basico.md  04-migracao-langgraph.md  05-memoria-persistente.md  06-auth-multiusuario.md  README.md
(+25 files in other folders)
